# sdf-raymarching

./: .gitignore  CMakeLists.txt  README.md
resources/: example_scene.json  fragment.glsl  fragment_ssbo.glsl  fragment_static.glsl  vertex.glsl
src/sdfraymarching/: Application.cpp  Application.hpp  main.cpp
src/sdfraymarching/render/: Camera.cpp  Camera.hpp  Canvas.cpp  Canvas.hpp  OpenGLRender.cpp  OpenGLRender.hpp  OpenGLRenderContext.cpp  OpenGLRenderContext.hpp  OpenGLRenderCreatingException.cpp  OpenGLRenderCreatingException.hpp  OpenGLResourceCreatingException.cpp  OpenGLResourceCreatingException.hpp  OpenGLWrapper.cpp  OpenGLWrapper.hpp  Shader.cpp  Shader.hpp  ShaderPreprocessor.cpp  ShaderPreprocessor.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ShaderStorageBuffer.cpp  ShaderStorageBuffer.hpp
src/sdfraymarching/render/drawer/: IDrawer.hpp  SceneTreeDrawer.cpp  SceneTreeDrawer.hpp  StaticDrawer.cpp  StaticDrawer.hpp
src/sdfraymarching/scene/: Figure.hpp  JsonSceneLoader.cpp  JsonSceneLoader.hpp  Material.cpp  Material.hpp  PlainScene.hpp  Scene.cpp  Scene.hpp  SceneConvertionException.cpp  SceneConvertionException.hpp  SceneLoadException.cpp  SceneLoadException.hpp  SceneNode.cpp  SceneNode.hpp  SceneNodeOperation.hpp  SceneSdfMethodGenerator.cpp  SceneSdfMethodGenerator.hpp  SceneToPlainConverter.cpp  SceneToPlainConverter.hpp
src/sdfraymarching/utils/: FileUtils.cpp  FileUtils.hpp  Logger.cpp  Logger.hpp
